--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -66,7 +66,7 @@
         @include flex(row, center, center);
         gap: $flex-gap-sm;
         padding: 14px;
-        border-radius: $border-radius-md;
+        border-radius: $border-radius-sm;
         border: none;
         color: $color-text-white;
         background-color: $color-btn-bg-grey;
@@ -75,6 +75,7 @@
         &:hover {
           cursor: pointer;
           background-color: $color-btn-bg-light-grey;
+          transform: scale(1.025);
         }
       }
       .add-board-form-content {
@@ -96,7 +97,7 @@
           @include flex(row, center, center);
           gap: $flex-gap-sm;
           button {
-            @include actionBtn(10px 14px);
+            @include actionBtn(10px 13px);
             color: $color-text-white;
           }
           .confirm-add-btn {
