--- a/src/app/pages/board/tasks/tasks.component.scss
+++ b/src/app/pages/board/tasks/tasks.component.scss
@@ -1,5 +1,112 @@
 @import '../../../../styles/abstracts';
 
+.task-backdrop {
+  z-index: 1;
+  backdrop-filter: blur(1.5px);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.task-dialog {
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  max-width: 400px;
+  border: none;
+  color: $color-text-white;
+  border-radius: $border-radius-md;
+  background-color: $color-bg;
+  box-shadow: $box-shadow-spread;
+  .task-dialog-close-btn {
+    @include actionBtn(8px 12px);
+    font-size: $font-size-lg;
+    float: right;
+    color: $color-text-white;
+    transition: $transition-fast;
+    &:hover {
+      background-color: $color-btn-bg-dark-grey;
+    }
+    .pi-times {
+      margin-top: 4px;
+    }
+  }
+  .task-dialog-form {
+    @include flex(column, center, center);
+    gap: $font-size-lg;
+    padding-top: 20px;
+    .task-form-item {
+      @include flex(column, center, flex-start);
+      gap: $flex-gap-sm;
+      width: 100%;
+      input,
+      textarea {
+        font-family: inherit;
+        box-sizing: border-box;
+        padding: 15px;
+        width: 100%;
+        border: none;
+        color: $color-text-white;
+        background-color: $color-btn-bg-grey;
+      }
+      ::-webkit-calendar-picker-indicator {
+        cursor: pointer;
+        font-size: $font-size-lg;
+        filter: invert(1);
+      }
+      .task-form-high-priority,
+      .task-form-medium-priority,
+      .task-form-low-priority {
+        cursor: pointer;
+        padding: 5px 15px;
+        border-radius: $border-radius-sm;
+        transition: $transition-fast;
+      }
+      .task-form-high-priority {
+        &:hover,
+        &.active {
+          color: #e66e6e;
+          background-color: #5c3030;
+        }
+      }
+      .task-form-medium-priority {
+        &:hover,
+        &.active {
+          color: #dede67;
+          background-color: #636330;
+        }
+      }
+      .task-form-low-priority {
+        &:hover,
+        &.active {
+          color: #69be69;
+          background-color: #345634;
+        }
+      }
+    }
+    .task-submit-btn {
+      @include actionBtn(10px 14px);
+      margin-left: auto;
+      transition: $transition-fast;
+      &:disabled {
+        cursor: default;
+        color: $color-disabled;
+      }
+      &:not(:disabled) {
+        background-color: $color-btn-bg-white;
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+    }
+  }
+}
+
 .tasks-wrapper {
   @include flex(row, space-between, center);
   margin-bottom: 20px;
@@ -27,6 +134,11 @@
             background-color: $color-btn-bg-light-grey;
           }
         }
+        .toolbar-add-task-btn {
+          &:hover {
+            transform: scale(1.2);
+          }
+        }
       }
     }
     .tasks-content {
@@ -38,16 +150,20 @@
         margin-top: 20px;
         margin-bottom: 20px;
         border-collapse: collapse;
+        tr {
+          &:hover td {
+            background-color: $color-btn-bg-grey;
+          }
+        }
         th,
         td {
-          padding: 10px;
+          transition: $transition-fast;
+          padding: 20px;
         }
         td {
-          max-width: 450px;
+          max-width: 150px;
           border-top: 1px solid $color-border;
           border-bottom: 1px solid $color-border;
-          border-left: 1px solid $color-border;
-          border-right: 1px solid $color-border;
           background-color: $color-bg-page;
           &:first-child {
             border-left: none;
@@ -57,6 +173,7 @@
           }
         }
         .estimation-td,
+        .priority-td,
         .status-td,
         .action-btns-td {
           text-align: center;
@@ -68,9 +185,9 @@
             @include actionBtn(0px);
             font-size: $font-size-lg;
             color: $color-text-white;
-            transition: $transition-slow;
+            transition: $transition-fast;
             &:hover {
-              color: greenyellow;
+              transform: scale(1.1);
             }
           }
         }
@@ -79,22 +196,58 @@
           gap: $flex-gap-sm;
           .task-edit-btn,
           .task-delete-btn {
-            @include actionBtn(10px 12px);
+            @include actionBtn(10px 13px);
             color: $color-text-white;
           }
           .task-edit-btn {
-            transition: $transition-slow;
+            transition: $transition-fast;
             &:hover {
               background-color: $color-btn-bg-light-grey;
             }
           }
+          .task-delete-btn {
+            transition: $transition-fast;
+            &:hover {
+              background-color: $color-bg-light-danger;
+            }
+          }
+          .pi-pen-to-square,
+          .pi-trash {
+            padding-top: 4px;
+          }
         }
-        .high {
+        .high-priority {
+          cursor: default;
           @include flex(row, center, center);
-          border-radius: $border-radius-sm;
           gap: $flex-gap-sm;
-          color: #ff3535;
-          background-color: #221717;
+          margin: auto;
+          max-width: 100px;
+          padding: 5px;
+          border-radius: $border-radius-sm;
+          color: #e66e6e;
+          background-color: #5c3030;
+        }
+        .medium-priority {
+          cursor: default;
+          @include flex(row, center, center);
+          gap: $flex-gap-sm;
+          margin: auto;
+          max-width: 100px;
+          padding: 5px;
+          border-radius: $border-radius-sm;
+          color: #dede67;
+          background-color: #636330;
+        }
+        .low-priority {
+          cursor: default;
+          @include flex(row, center, center);
+          gap: $flex-gap-sm;
+          margin: auto;
+          max-width: 100px;
+          padding: 5px;
+          border-radius: $border-radius-sm;
+          color: #69be69;
+          background-color: #345634;
         }
       }
     }
