--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -48,7 +48,7 @@
     }
     .icon {
       padding: 10px;
-      border-radius: $border-radius-md;
+      border-radius: $border-radius-sm;
       color: $color-text-black;
       background-color: $color-btn-bg-white;
     }
